--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm: 2.2.3
 bundler_args: "--without production development"
+before_script:
+  - cp config/database.travis.yml config/database.yml
 deploy:
   provider: heroku
   api_key:
