--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,4 @@ deploy:
   app: zhenya-budget-staging
   on:
     repo: hazah/budget
-env:
-  - SECRET_KEY_BASE="$(bundle exec rake secret)"
+  run: "rake db:migrate"
