--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: ruby
 rvm: 2.2.3
 bundler_args: "--without production development"
 before_script:
-  - cp config/database.travis.yml config/database.yml
+  - cp config/database.yml.example config/database.yml
+  - cp config/secrets.yml.example config/secrets.yml
 deploy:
   provider: heroku
   api_key:
@@ -11,5 +12,3 @@ deploy:
   on:
     repo: hazah/budget
   run: "rake db:migrate"
-env:
-  - SECRET_KEY_BASE="$(bundle exec rake secret)"
