Fixes seeds and automates for deployment to staging.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ deploy:
   app: zhenya-budget-staging
   on:
     repo: hazah/budget
-  run: "rake db:migrate"
+  run:
+    - "rake db:migrate"
+    - "rake db:seed"
