Adds entry model and tests.

--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+cash:
   name: cash
   account_classification: debit
 
-two:
+rent:
   name: rent
   account_classification: credit
