--- a/test/fixtures/entries.yml
+++ b/test/fixtures/entries.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  debit: debit
-  credit: credit
+  debit: cash
+  credit: rent
   amount: 100
   transaction_date: <%= 2.day.ago.to_s(:db) %>
